# pymulakat-v2-beta

./: .gitignore  LICENSE  setup-env.ps1
gozbebgim/: .env.example  README.md  dependencies.py  docker-compose.yml  pymulakat.code-workspace  seo_keyword_strategy.md  test-auth.sh  yapılacaklar.txt
gozbebgim/backend/: cron_job.ps1  cron_job.sh  dependencies.py  main.py  plan.md  pyproject.toml  question_loader.py  schemas.py  supabase_client.py  test-token.py  test.py
gozbebgim/backend/data/: QUESTIONS.py
gozbebgim/backend/routers/: attempts.py  auth.py  categories.py  interviews.py  questions.py
gozbebgim/backend/services/: gemini.py  upload_questions.py
gozbebgim/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
gozbebgim/frontend/api/v2/: questions.ts
gozbebgim/frontend/app/: layout.tsx  page.tsx  robots.js  sitemap.xml
gozbebgim/frontend/app/auth/callback/: page.tsx
gozbebgim/frontend/app/auth/forgot-password/: page.tsx
gozbebgim/frontend/app/interviews/: layout.tsx  page.tsx
gozbebgim/frontend/app/login/: page.tsx
gozbebgim/frontend/app/profile/: page.tsx
gozbebgim/frontend/app/register/: page.tsx
gozbebgim/frontend/app/terms/: page.tsx
gozbebgim/frontend/components/: CategoryTable.tsx  CodeShareModal.tsx  Editor.tsx  GuestBanner.tsx  LibararyNav.tsx  Monaco.tsx  TestCaseDrawer.tsx
gozbebgim/frontend/hooks/: useAuthGate.ts  usePyodide.ts  useSupabaseBrowser.ts  useUser.ts
gozbebgim/frontend/lib/: pyodide-manager.ts
gozbebgim/frontend/public/workers/: pyodide-worker.js  site.webmanifest
(+6 files in other folders)
